# eclpy

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.rst  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: api-guide.md  api-reference.rst  architecture.md  asdf.md  conf.py  development.md  index.md  lisp-source.md  python-in-lisp.md  quickstart.md  swank.md
ecl/: __init__.py  api.py  encode.py  objects.py  reader.py  session.py  simple.py
eclpy/: __init__.py  __main__.py  api.py  decode.py  encode.py  errors.py  hostenv.py  lisp.py  objects.py  protocol.py  proxy.py  python.lisp  python_lisp.py  reader.py  runtime.lisp  runtime_lisp.py  session.py  sexp.py  simple.py  syntax.py  wasmmem.py
eclpy/swank/: loader.lisp
native/: eclpy_eval.c  eclpy_json.c  eclpy_json.h
patch/: README.md  README.rst
patch/ecl-wasm/: 0001-remove-binaryen-spill-pointers.patch  0002-disable-emscripten-stack-size-probe.patch
scripts/: build_ecl_wasm.py  hatch_build.py
tests/: __init__.py  test_api_internals.py  test_decode.py  test_encode.py  test_main.py  test_objects.py  test_package_metadata.py  test_reader_sexp.py  test_session.py  test_session_internals.py  test_sexp.py  test_simple.py  test_swank.py  test_syntax.py
