[project]
name = "eclpy"
version = "0.1.0"
description = "Evaluate Common Lisp from Python through an ECL WebAssembly runtime"
readme = "README.rst"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE", "COPYING"]
requires-python = ">=3.14"
dependencies = [
    "wasmtime>=45.0.0",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eclpy"]
artifacts = ["eclpy/ecl_eval.wasm", "eclpy/asdf.lisp"]
force-include = { "eclpy/runtime.lisp" = "eclpy/runtime.lisp" }

[tool.hatch.build.targets.sdist.force-include]
"eclpy/ecl_eval.wasm" = "eclpy/ecl_eval.wasm"
"eclpy/asdf.lisp" = "eclpy/asdf.lisp"
"eclpy/runtime.lisp" = "eclpy/runtime.lisp"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "coverage>=7.14.3",
    "ruff>=0.15.20",
]

[tool.coverage.run]
source = ["eclpy"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
include = ["eclpy"]
exclude = ["build", "dist", "vendor"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
extend-exclude = ["emsdk-cache", "vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "RUF"]
