[project]
name = "eclpy"
version = "0.1.0"
description = "Evaluate Common Lisp from Python through an ECL WebAssembly runtime"
readme = "README.md"
license = "LGPL-2.1-or-later"
license-files = ["LICENSE", "COPYING"]
requires-python = ">=3.14"
dependencies = [
    "wasmtime>=45.0.0",
]
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
repl = [
    "pygments>=2.0",
    "prompt-toolkit>=3.0.52",
]

[project.scripts]
eclpy = "eclpy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eclpy"]
artifacts = [
    "eclpy/ecl_eval.wasm",
    "eclpy/asdf.lisp",
    "eclpy/runtime.lisp",
    "eclpy/python.lisp",
    "eclpy/swank/*.lisp",
]

[tool.hatch.build.targets.sdist]
include = [
    "/.python-version",
    "/COPYING",
    "/LICENSE",
    "/README.md",
    "/docs",
    "/eclpy",
    "/native",
    "/patch",
    "/pyproject.toml",
    "/scripts",
    "/tests",
    "/uv.lock",
    "/vendor",
]
exclude = [
    "/.claude",
    "/.codex",
    "/.coverage",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/build",
    "/docs/_build",
    "/dist",
    "/emsdk-cache",
    "**/__pycache__",
]

[tool.hatch.build.targets.sdist.force-include]
"eclpy/ecl_eval.wasm" = "eclpy/ecl_eval.wasm"
"eclpy/asdf.lisp" = "eclpy/asdf.lisp"
"eclpy/runtime.lisp" = "eclpy/runtime.lisp"
"eclpy/python.lisp" = "eclpy/python.lisp"
"eclpy/swank" = "eclpy/swank"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "coverage>=7.14.3",
    "furo>=2025.9.25",
    "hatchling>=1.28.0",
    "myst-parser>=4.0.0",
    "ruff>=0.15.20",
    "sphinx>=8.2.0",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.coverage.run]
source = ["eclpy"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.basedpyright]
include = ["eclpy", "scripts"]
exclude = ["build", "dist", "vendor"]
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 100
extend-exclude = ["emsdk-cache", "vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "RUF"]
